Possible compatibility problems with earlier versions marked with '*'.

--- 1.6 2000/03/03

Added configure option --enable-comp/disable-comp to control use
of YAZ ASN.1 compiler. Use --disable-comp to use the old *coders
located in sub directory asn.

YAZ ASN.1 compiler renamed to yaz-comp in sub directory. It's installed
in ${exec_prefix}/bin along with the other programs yaz-client and
yaz-ztest.

GNU automake used to maintain makefiles.

Added several OID's.

Changed retrieval module so that we can load records with no abstract
syntax defined. Tagpaths in these records are fully composed of string
tags.

Implemented ISO ILL protocol. Refer to stuff in sub directory ill.

--- 1.5 1999/12/10

On UNIX, the generated makefile now supports a proper 'make install'.
The prefix can be set via GNU configure to set the install location
(default is /usr/local).

* YAZ programs client and ztest were renamed to yaz-client and
yaz-ztest to avoid conflicts when users install YAZ in "standard"
locations, such as /usr/bin,/usr/local/bin,etc.

* YAZ Header files were moved from include to include/yaz. YAZ Header
files are referred to as include <yaz/log.h> rather than <log.h>.
The YAZ include path (-I ..) is therefore the same as before. Programmers
should update their #include statements or use -Ipath/include/yaz
instead. The main motivation for doing this change is that YAZ header files
can be installed in "standard" locations /usr/include,/usr/local/include 
without introducing conflicts, since ALL YAZ header files are stored
in subdirectory yaz (under /usr/include for example).

Compilation of YAZ for WIN32 is now handled by an nmake-style makefile 
rather than project/workspace files. We switched because project files
are incompatible between Visual C++ 5 and 6. Refer to windows.txt for
details.

Changed name of logging function, logf, to yaz_log, to prevent name
clash with some math-log functions. The YAZ header log.h defines logf